# YaskSite

./: .gitignore  CMakeLists.txt  README.md  Singularity  install_script.sh  yasksite-config.cmake.in
cmake/: OptimizeForArchitecture.cmake
example/: CMakeLists.txt  README.md
example/include/: offsite_parse.h  parse.h
example/mc_files/: BroadwellEP_E5-2697v4_CoD.yml  CascadelakeSP_Gold-6248.yml  Zen_ROME-7452.yml
example/src/: INSPECT_adapt.cpp  box.cpp  codeGenExample.cpp  getBtwString.sh  main.cpp  offsite_adapter.cpp  offsite_parse.cpp  parse.cpp  perf.cpp  perf_assoc.cpp  perf_assoc_2.cpp  perf_irk.cpp  perf_irk_unrolled.cpp  perf_latency_proof.cpp  perf_old.c  perf_prefetch.cpp  perf_prefetch_shared_private_cache.cpp  perf_wo_likwid.cpp  perf_y_prefetch.cpp  perf_y_prefetch.sh  run.cpp  run_irk.cpp  ys_offtune
include/: MPI_Manager.h  codeGen.h  config.h  config.h.in  fileIO.hpp  macros.h  perfModel.h  print.h  types.h  util.h  yaskFork.h  yaskSite.h
mc_files/: CascadelakeSP_Gold-6248.yml  CascadelakeSP_Gold-6248_SNC.yml  IvyBridgeEP_E5-2660v2.yml  Zen_ROME-7452.yml
src/: MPI_Manager.cpp  codeGen.cpp  perfModel.cpp  perfModel_orig.cpp  types.cpp  util.cpp  yaskFork.cpp  yaskSite.cpp
src/derivedStencils/: heat_embrk.hpp  heat_rk_update.hpp  heat_update.hpp
src/stencils/: Dummy.hpp  Heat.hpp  Heat_offsite.hpp  Iso3dfdStencil.hpp  Wave.hpp  Wave_offsite.hpp  box.hpp  heat.hpp  heat_8_order.hpp  heat_neumann.h  heat_old.h  heat_rev.hpp  update_version.sh
src/tools/: assembly.s  check  check.s  cpuFreqCheck.sh  cpuInSocket.sh  createYASKLib.sh  generateIACA.sh  getAssemblyDetails.sh  getCacheInfo.sh  getEqnGroups.sh  getFreq.sh  getGrids.sh  getHalo.sh  getMemInfo.sh  getNumMainEqns.sh  getRadius.sh  getS.sh  getTimeSteps.sh  getTotalStencils.sh  iaca_download_step.lynx  isMachineBenchmarkStable.sh  lic_agree.sh  numaPerSocket.sh  read_mc_file.sh  register.sh  test.txt  threadPerNUMA.sh  threadPerSocket.sh  unitconvert.sh  updateStencil.sh
src/tools/bw_bench/: Makefile  bench.cpp.in  bench.sh  bench_scan.sh  cpuFreqCheck.sh  dummy.cpp  dummy.h  needCalibration.sh  substitute.sh
src/tools/cacheInfo/: getCacheInfo.sh  getMemInfo.sh  numCache.sh
src/tools/codeGenerator/: codeGenerator.sh  getObj.sh  getStencilClass.sh  getStencilFile.sh  isStencilRadius.sh  needCacheUpdate.sh  new_code.txt  rmLine.sh  substitute.sh  substitute_plain.sh  temp_YS_inpCode.txt  temp_YS_inpCode_copy.txt  temp_gen.hpp  template.h  template.hpp  template_radius.h  template_radius.hpp  tmp_1.txt  tmp_a.txt
src/tools/codeGenerator/work/: exec_code.sh
src/tools/data_path_bw/: measure.sh
src/tools/ecm_eval/: eval.sh  max.bc
src/tools/latency_bench/: latency_scan.sh
src/tools/latency_bench/mem_latency/: Makefile  bench.cpp  bench_exec  check.txt  dummy.cpp  memLatency.sh
src/tools/latency_bench/mlc/: mlc  mlc_avx512
src/tools/latency_bench/wrapper/: Makefile  mlc_no_pf.c
src/tools/prefetcher/: Makefile  README  bench.cpp  bench_exec  dummy.h  prefetch_dist.sh  timing.h
src/tools/tmp/: iaca_blockThroughput.txt  iaca_cycle.txt  iaca_out.txt  iaca_port.txt
src/tools/yamlParser/: IvyBridgeEP_E5-2660v2.yml  Makefile  yamlGetInfo.cpp
symee/: symee.c  symee.h
symee/src/: realv.hpp  realv_grids.cpp  realv_grids.test.hsw.optrpt  realv_grids.ys_Approx_ji_yasksite.hsw.optrpt  realv_grids.ys_RHS_jl_yasksite_Heat2D.hsw.optrpt  stencil.hpp  stencil_block_loops.hpp  stencil_calc_new.hpp  stencil_code.hpp  stencil_code.hpp~  stencil_macros.hpp  stencil_rank_loops.hpp  stencil_region_loops.hpp  utils.test.hsw.optrpt  utils.ys_Approx_ji_yasksite.hsw.optrpt  utils.ys_RHS_jl_yasksite_Heat2D.hsw.optrpt  yaskFork.cpp
symee/src/foldBuilder/: Cpp.hpp  Expr.cpp  Expr.hpp  stencils.hpp
symee/src/foldBuilder/stencils/: AwpElasticStencil.hpp
symee/src/foldBuilder/stencils/yaskSiteStencils/: Dummy.hpp  Heat_offsite.hpp  Iso3dfdStencil.hpp  box.hpp  eye.hpp  heat.hpp  heat_rev.hpp  test.hpp  ys_ApproxUpdate_ji_yasksite.hpp  ys_Approx_ji_yasksite.hpp  ys_LC_jli_yasksite.hpp  ys_RHS_LC_jil_yasksite_Heat2D.hpp  ys_RHS_jl_yasksite_Heat2D.hpp  (+1 more)
symee/src/my_loops/: stencil_rank_loops.hpp  stencil_region_loops.hpp
yask/: Makefile  build_cmd.sh  time_record.txt  yask-tuner.heat3d.ivb.e0716.2018-03-18_13-54-30.csv  yask-tuner.heat3d.ivb.e0940.2018-03-17_10-55-39.csv
yask/src/: generic_grids.hpp  layout_macros.hpp  layouts.hpp  realv.hpp  realv_grids.hpp  stencil_block_loops.hpp  stencil_calc.cpp  stencil_calc.hpp  stencil_calc_new.cpp  stencil_code.hpp  stencil_code.hpp~  stencil_halo_loops.hpp  stencil_macros.hpp  stencil_main.cpp  stencil_region_loops.hpp  stencil_sub_block_loops.hpp
yask/src/foldBuilder/: Expr.hpp  Print.cpp  main.cpp  stencils.hpp
yask/src/foldBuilder/stencils/: ExampleStencil.hpp
yask/src/my_loops/: stencil_block_loops.hpp  stencil_sub_block_loops.hpp
yask/tuning_bdw/: yask_tuning_rad1.batch
yask/tuning_ivb/: yaskTuning_rad3.e898297  yaskTuning_rad3.o898297  yask_tuning.batch
yask/yaskSite/: CMakeCache.txt  CMakeLists.txt
yask/yaskSite/example/: Makefile  main.c  perf  perf.batch  perf.c  yaskSite
yask/yaskSite/example/perf_results/default/: plain.txt  spatial.txt  temporal.txt
yask/yaskSite/example/perf_results/serpentine/: plain.txt  spatial_1.txt  spatial_2.txt  temporal.txt
yask/yaskSite/example/perf_results_reminder/default/: plain.txt  spatial.txt  temporal.txt
yask/yaskSite/example/perf_results_reminder/serpentine/: plain.txt  spatial_1.txt  spatial_2.txt  temporal.txt
yask/yaskSite/include/: AppSettings.h  config.h  config.h.in  macros.h  print.h  util.h  yaskFork.h  yaskSite.h
yask/yaskSite/loop_adapt/: .gitignore  config.mk  loop_adapt.c  loop_adapt_policies.c
yask/yaskSite/loop_adapt/example/: Makefile  inf_memcpy.c
yask/yaskSite/loop_adapt/tmp/: loop_adapt-cfgcmd.txt
yask/yaskSite/src/: MPI_Manager.cpp  SeasiteStencil.hpp  util.cpp  yaskFork.cpp  yaskSite.cpp
yask/yaskSite/src/tools/: createYASKLib.sh  getCacheInfo.sh  updateStencil.sh
ys_patch/: patchScript.sh  patchText.txt  patchText3.txt  patchText4.txt
(+1 files in other folders)
